Add performance test for full configuration
This is the initial attempt to have a performance test that triggers a full model configuration, including subprojects. This test also uses dry run in order to make sure that we don't execute tasks, and only configure the model.